# inpainting-detection

./: CMakeLists.txt  README.md
files/in/: index.txt
python/: consts.py  create_noisy_images.py  flush_all_fast_outs.py  list_files.py  plot_granulometry.py  plot_histograms.py  plot_noise_levels.py  pos_distances_statistics.py  rename_files.py  test.py  visualize_local_noise.py
src/: connected_components.h  detector.cpp  detector.h  disk_cache.cpp  disk_cache.h  inpainting_detector.cpp  inpainting_detector.h  main.cpp  misc.cpp  misc.h  nnf.cpp  nnf.h  offset_histogram.h  parameters.cpp  parameters.h  patch_distance.h  utils.h
test/: main.cpp  test_connected_components.cpp  test_experimentations.cpp  test_misc.cpp  test_utils.h
